# SpideriFy-Backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.dev  README.md  app.py  config.py  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt  spiderify-stack.yml  test-scrper.py  test_suite.py
common/: db.py  utils.py
controllers/: LogIn.py  SignIn.py
crawler/: AmScrapper.py  AmSentimentAnalyzer.py  AmazonSpider.py  SpiderifyWrapper.py  Summarization.py  pro-selectors.yml
crawler/fixtures/: Scraped-data-4(rainforest1).json  Scraped-data.json  Scraped-data2.json  Scraped-data3.json  rainfores-api-prod.json  rainforest-api-test-product.json  rainforest-api-test-reviews.json
crawler/tests/: test_AmScrapper.py  test_AmazonSpider.py
docker/: docker-compose.yaml
logger/: Logger.py  corelogger.py
migrations/versions/: 143517c34402_.py  375b09021f71_.py  38a33eb85b6a_.py  45209be9f376_.py  4e4a5fdfacea_.py  57d7bc37b99e_.py  ad46d84b8907_.py
models/: Comment.py  Product.py  User.py
nginx/: nginx.conf
proxysql/: proxysql.cnf
resources/: comment.py  product.py  user.py
tests/: test_AmScrapper.py  test_AmazonSpider.py
tests/mock/: Dockerfile  app.py
