[tool.poetry]
name = "spiderify-backend"
version = "0.1.0"
description = "Amazon Review Scraper And Sentiment Analyzer"
authors = ["Farid Ahmadpour <aramain.koramain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
