[tool.poetry]
name = "spiderify-backend"
version = "0.1.0"
description = "Amazon Review Scraper And Sentiment Analyzer"
authors = ["Farid Ahmadpour <aramain.koramain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
httpx = "^0.17.1"
asyncio = "^3.4.3"
selectorlib = "^0.16.0"
Extractor = "^0.5"
Flask = "^1.1.2"
Flask-Cors = "^3.0.10"
Flask-Migrate = "^2.7.0"
Flask-Script = "^2.0.6"
Flask-SQLAlchemy = "^2.5.1"
Flask-RESTful = "^0.3.8"
pytest = "^6.2.3"
Flask-JWT-Extended = "^4.1.0"
mysqlclient = {path = "wheels/mysqlclient-1.4.6-cp38-cp38-win32.whl"}
PyMySQL = "^1.0.2"
cryptography = "^3.4.7"
python-dotenv = "^0.17.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
